--- a/MVC-hello/MVC-hello/Views/Home/Index.cshtml
+++ b/MVC-hello/MVC-hello/Views/Home/Index.cshtml
@@ -1,15 +1,13 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+﻿@{
+    Layout = "_Layout";
+}   
 
+    <div class="container">
+
+
+    
     <div style="border:1px solid black; width:150px; height:150px; background-color:blue;"></div>
         <h1>Burası home controller - ındex actiions</h1>
 
-</body>
-</html>
+        <a href="#">content</a>
+</div>
